test/compile_errors/err_struct_lit_nested_needs_colon.w
//! expect-check-fail: unknown type 'Outer'
fn main:
    let g = Outer { Inner { x: 1 } }
